--- a/src/app/authentication/sign-in/sign-in.component.html
+++ b/src/app/authentication/sign-in/sign-in.component.html
@@ -32,14 +32,18 @@
                             <label class="main-label d-block fw-medium text-black">
                                 Email Address
                             </label>
-                            <input [(ngModel)]="token.username" name="username" type="text" class="form-control" placeholder="example&#64;email.com">
+                            <input [(ngModel)]="token.username" name="username" type="text" class="form-control"
+                                   placeholder="example&#64;email.com">
                         </div>
                         <div class="form-group position-relative">
                             <label class="main-label d-block fw-medium text-black">
                                 Password
                             </label>
-                            <input [(ngModel)]="token.password" name="password" [type]="isPasswordVisible ? 'text' : 'password'" (input)="onPasswordInput($event)" class="form-control" placeholder="Type password">
-                            <button type="button" (click)="togglePasswordVisibility()" class="icon-button p-0 border-0 bg-transparent transition">
+                            <input [(ngModel)]="token.password" name="password"
+                                   [type]="isPasswordVisible ? 'text' : 'password'" (input)="onPasswordInput($event)"
+                                   class="form-control" placeholder="Type password">
+                            <button type="button" (click)="togglePasswordVisibility()"
+                                    class="icon-button p-0 border-0 bg-transparent transition">
                                 <i [ngClass]="isPasswordVisible ? 'ri-eye-line' : 'ri-eye-off-line'"></i>
                             </button>
                         </div>
@@ -53,16 +57,22 @@
                                 Forgot Password?
                             </a>
                         </div>
-                        <button type="button" (click)="signIn()" class="btn-box d-block w-100 border-0 transition fw-medium border-radius">
-                            <span class="d-flex align-items-center justify-content-center">
-                                <i class="material-symbols-outlined">
-                                    login
-                                </i>
+                        <button type="button" (click)="signIn()"
+                                class="btn-box d-block w-100 border-0 transition fw-medium border-radius"
+                                [disabled]="isLoading">
+                            <span *ngIf="!isLoading" class="d-flex align-items-center justify-content-center">
+                                <i class="material-symbols-outlined">login</i>
                                 Sign In
                             </span>
+                                                    <span *ngIf="isLoading" class="d-flex align-items-center justify-content-center">
+                                <i class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></i>
+                                Please wait...
+                            </span>
                         </button>
+
                         <p class="info">
-                            Don’t have an account. <a routerLink="/authentication/sign-up" class="fw-semibold text-primary">Sign Up</a>
+                            Don’t have an account. <a routerLink="/authentication/sign-up"
+                                                      class="fw-semibold text-primary">Sign Up</a>
                         </p>
                     </form>
                 </div>
