--- a/src/app/authentication/sign-up/sign-up.component.html
+++ b/src/app/authentication/sign-up/sign-up.component.html
@@ -1,86 +1,92 @@
 <div
     class="sign-up-area"
-    [class.dark-theme]="themeService.isDark()"
 >
     <div
         class="trezo-form mx-auto"
-        [class.component-dark-theme]="themeService.isDark()"
-        [class.component-rtl-enabled]="themeService.isRTLEnabled()"
     >
         <div class="row align-items-center">
             <div class="col-lg-6 col-md-12 order-2 order-lg-1">
                 <div class="form-image">
-                    <img src="images/sign-up.jpg" alt="sign-up-image">
+                    <img src="images/sign-in.jpg" alt="sign-in-image">
                 </div>
             </div>
             <div class="col-lg-6 col-md-12 order-1 order-lg-2">
                 <div class="form-content">
-                    <div class="logo">
+                    <!--<div class="logo">
                         <img src="images/logo-big.svg" alt="logo">
                         <img src="images/white-logo-big.svg" class="d-none" alt="logo">
-                    </div>
+                    </div>-->
                     <div class="title">
                         <h1 class="fw-semibold">
-                            Sign up to Trezo Dashboard
+                            Welcome!
                         </h1>
                         <p class="fw-medium">
-                            Sign up with social account or enter your details
+                            Sign In with your details
                         </p>
                     </div>
-                    <div class="with-socials d-flex align-items-center justify-content-between">
-                        <div>
-                            <button type="button" class="d-block w-100 border-radius transition">
-                                <img src="images/icons/google.svg" alt="google">
-                            </button>
-                        </div>
-                        <div>
-                            <button type="button" class="d-block w-100 border-radius transition">
-                                <img src="images/icons/facebook2.svg" alt="facebook">
-                            </button>
-                        </div>
-                        <div>
-                            <button type="button" class="d-block w-100 border-radius transition">
-                                <img src="images/icons/apple.svg" alt="apple">
-                            </button>
-                        </div>
-                    </div>
+
                     <form>
                         <div class="form-group">
-                            <label class="main-label d-block fw-medium text-black">
-                                Full Name
-                            </label>
-                            <input type="text" class="form-control" placeholder="Enter your full name">
+                            <label class="main-label d-block fw-medium text-black">Full Name</label>
+                            <input
+                                [(ngModel)]="user.name"
+                                name="name"
+                                type="text"
+                                class="form-control"
+                                placeholder="Enter your full name"
+                            />
+                            <small *ngIf="errors['name']" class="form-text text-danger">{{ errors['name'] }}</small>
                         </div>
+
                         <div class="form-group">
-                            <label class="main-label d-block fw-medium text-black">
-                                Email Address
-                            </label>
-                            <input type="text" class="form-control" placeholder="example&#64;trezo.com">
+                            <label class="main-label d-block fw-medium text-black">Phone Number</label>
+                            <input
+                                [(ngModel)]="user.cell"
+                                name="name"
+                                type="text"
+                                class="form-control"
+                                placeholder="Enter your phone number"
+                            />
+                            <small *ngIf="errors['cell']" class="form-text text-danger">{{ errors['cell'] }}</small>
                         </div>
+
+                        <div class="form-group">
+                            <label class="main-label d-block fw-medium text-black">Username</label>
+                            <input
+                                [(ngModel)]="user.username"
+                                name="email"
+                                type="email"
+                                class="form-control"
+                                placeholder="John101"
+                            />
+                            <small *ngIf="errors['username']" class="form-text text-danger">{{ errors['username'] }}</small>
+                        </div>
+
                         <div class="form-group position-relative">
                             <label class="main-label d-block fw-medium text-black">
                                 Password
                             </label>
-                            <input [type]="isPasswordVisible ? 'text' : 'password'" [value]="password" (input)="onPasswordInput($event)" class="form-control" placeholder="Type password">
+                            <input [(ngModel)]="user.password" name="password" [type]="isPasswordVisible ? 'text' : 'password'" class="form-control" placeholder="Type password">
                             <button type="button" (click)="togglePasswordVisibility()" class="icon-button p-0 border-0 bg-transparent transition">
                                 <i [ngClass]="isPasswordVisible ? 'ri-eye-line' : 'ri-eye-off-line'"></i>
                             </button>
                         </div>
-                        <button type="button" class="btn-box d-block w-100 border-0 transition fw-medium border-radius">
-                            <span class="d-flex align-items-center justify-content-center">
-                                <i class="material-symbols-outlined">
-                                    person_4
-                                </i>
-                                Sign Up
-                            </span>
+                        <small *ngIf="errors['password']" class="form-text text-danger">{{ errors['password'] }}</small>
+
+                        <button
+                            type="button"
+                            (click)="signUp()"
+                            class="btn-box d-block w-100 border-0 transition fw-medium border-radius"
+                            [disabled]="isLoading"
+                        >
+                            <span *ngIf="!isLoading">Sign Up</span>
+                            <span *ngIf="isLoading">Please wait...</span>
                         </button>
-                        <p class="info">
-                            By confirming your email, you agree to our <a class="fw-medium" routerLink=".">Terms of Service</a> and that you have read and understood our <a class="fw-medium" routerLink=".">Privacy Policy</a>.
-                        </p>
-                        <p class="info">
-                            Already have an account. <a routerLink="/authentication" class="fw-semibold text-primary">Sign In</a>
-                        </p>
                     </form>
+                    <p class="info">
+                        Already have an account? <a routerLink="/authentication/" class="fw-semibold text-primary">Sign
+                        In</a>
+                    </p>
                 </div>
             </div>
         </div>
