marketplace design  fixed

--- a/src/app/marketing/browse-units/browse-units.component.html
+++ b/src/app/marketing/browse-units/browse-units.component.html
@@ -3,7 +3,7 @@
 <!-- Search and Filters -->
 <div class="trezo-card mb-25 border-radius d-block bg-white border-0 shadow-none" style="margin-top: 15vh">
     <h1 class="text-center">
-        Browse Buildings, View Units, Contact US
+        Browse Units
     </h1>
     <br>
     <div class="trezo-card-content">
