--- a/src/app/front-pages/common/fp-footer/fp-footer.component.html
+++ b/src/app/front-pages/common/fp-footer/fp-footer.component.html
@@ -1,8 +1,4 @@
-<footer
-    class="pt-150"
-    [class.component-dark-theme]="themeService.isDark()"
-    [class.component-rtl-enabled]="themeService.isRTLEnabled()"
->
+<footer class="pt-150" [class.component-dark-theme]="themeService.isDark()" [class.component-rtl-enabled]="themeService.isRTLEnabled()">
     <div class="container">
         <div class="row">
             <div class="col-lg-3 col-sm-6">
@@ -11,9 +7,7 @@
                         <img src="images/logo-big.svg" alt="logo">
                         <img src="images/white-logo-big.svg" class="d-none" alt="logo">
                     </a>
-                    <p>
-                        With customizable dashboards tailored to your needs, collaborate effortlessly with your team and stay ahead with real-time updates.
-                    </p>
+                    <p>Streamline your real estate and construction operations with our comprehensive management platform. Build, manage, and sell properties efficiently.</p>
                     <div class="socials">
                         <a href="#" class="d-inline-block lh-1" target="_blank">
                             <i class="ri-facebook-fill"></i>
@@ -25,94 +19,64 @@
                             <i class="ri-linkedin-fill"></i>
                         </a>
                         <a href="#" class="d-inline-block lh-1" target="_blank">
-                            <i class="ri-dribbble-fill"></i>
+                            <i class="ri-youtube-fill"></i>
                         </a>
                     </div>
                 </div>
             </div>
             <div class="col-lg-3 col-sm-6">
                 <div class="single-footer-widget">
-                    <h3 class="fw-semibold">
-                        Our Products
-                    </h3>
+                    <h3 class="fw-semibold">Services</h3>
                     <ul class="p-0 custom-links m-0 list-unstyled">
                         <li>
-                            <a routerLink="." class="d-inline-block">
-                                Trezo Dashboard
-                            </a>
+                            <a routerLink="." class="d-inline-block">Construction Management</a>
                         </li>
                         <li>
-                            <a routerLink="." class="d-inline-block">
-                                Tagus Admin
-                            </a>
+                            <a routerLink="." class="d-inline-block">Property Sales</a>
                         </li>
                         <li>
-                            <a routerLink="." class="d-inline-block">
-                                eCademy LMS
-                            </a>
+                            <a routerLink="." class="d-inline-block">Marketing Tools</a>
                         </li>
                         <li>
-                            <a routerLink="." class="d-inline-block">
-                                Admash Template
-                            </a>
+                            <a routerLink="." class="d-inline-block">Financial Reports</a>
                         </li>
                     </ul>
                 </div>
             </div>
             <div class="col-lg-3 col-sm-6">
                 <div class="single-footer-widget">
-                    <h3 class="fw-semibold">
-                        Quick Links
-                    </h3>
+                    <h3 class="fw-semibold">Resources</h3>
                     <ul class="p-0 custom-links m-0 list-unstyled">
                         <li>
-                            <a routerLink="." class="d-inline-block">
-                                Home
-                            </a>
+                            <a routerLink="." class="d-inline-block">Properties</a>
                         </li>
                         <li>
-                            <a routerLink="." class="d-inline-block">
-                                Features
-                            </a>
+                            <a routerLink="." class="d-inline-block">Market Analysis</a>
                         </li>
                         <li>
-                            <a routerLink="." class="d-inline-block">
-                                Testimonials
-                            </a>
+                            <a routerLink="." class="d-inline-block">Case Studies</a>
                         </li>
                         <li>
-                            <a routerLink="." class="d-inline-block">
-                                Our Team
-                            </a>
+                            <a routerLink="." class="d-inline-block">Help Center</a>
                         </li>
                     </ul>
                 </div>
             </div>
             <div class="col-lg-3 col-sm-6">
                 <div class="single-footer-widget">
-                    <h3 class="fw-semibold">
-                        Privacy Policy
-                    </h3>
+                    <h3 class="fw-semibold">Legal</h3>
                     <ul class="p-0 custom-links m-0 list-unstyled">
                         <li>
-                            <a routerLink="." class="d-inline-block">
-                                Terms & Conditions
-                            </a>
+                            <a routerLink="." class="d-inline-block">Terms & Conditions</a>
                         </li>
                         <li>
-                            <a routerLink="." class="d-inline-block">
-                                Cookie Policy
-                            </a>
+                            <a routerLink="." class="d-inline-block">Privacy Policy</a>
                         </li>
                         <li>
-                            <a routerLink="." class="d-inline-block">
-                                Notice at Collection
-                            </a>
+                            <a routerLink="." class="d-inline-block">Refund Policy</a>
                         </li>
                         <li>
-                            <a routerLink="." class="d-inline-block">
-                                Privacy Policy
-                            </a>
+                            <a routerLink="." class="d-inline-block">Support Policy</a>
                         </li>
                     </ul>
                 </div>
@@ -121,9 +85,7 @@
     </div>
     <div class="copyright-area bg-white text-center">
         <div class="container">
-            <p>
-                © Shabab Ahmed
-            </p>
+            <p>© 2024 (Shabab Ahmed)</p>
         </div>
     </div>
 </footer>
