--- a/src/app/front-pages/common/fp-navbar/fp-navbar.component.html
+++ b/src/app/front-pages/common/fp-navbar/fp-navbar.component.html
@@ -31,28 +31,8 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a routerLink="/features" class="nav-link fw-medium" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
-                            Features
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a routerLink="/team" class="nav-link fw-medium" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
-                            Our Team
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a routerLink="/faq" class="nav-link fw-medium" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
-                            FAQ's
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a routerLink="/contact" class="nav-link fw-medium" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
-                            Contact
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a routerLink="/dashboard" class="nav-link fw-medium" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
-                            Admin
+                        <a routerLink="/marketplace" class="nav-link fw-medium" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+                            Products
                         </a>
                     </li>
                 </ul>
