supplier moved from raw material to standalone

--- a/src/app/construction/project/raw-material/raw-materials/raw-materials.component.html
+++ b/src/app/construction/project/raw-material/raw-materials/raw-materials.component.html
@@ -33,9 +33,17 @@
             <a class="add-btn d-inline-block transition fw-medium border-radius me-2" routerLink="/dashboard/raw-material-orders">
                 <span class="d-inline-block position-relative">
                     <i class="material-symbols-outlined">
-                        add
+                        list
                     </i>
                     Orders
+                </span>
+            </a>
+            <a class="add-btn d-inline-block transition fw-medium border-radius me-2" routerLink="/dashboard/raw-material-suppliers">
+                <span class="d-inline-block position-relative">
+                    <i class="material-symbols-outlined">
+                        list
+                    </i>
+                    Suppliers
                 </span>
             </a>
             <a class="add-btn d-inline-block transition fw-medium border-radius" routerLink="/dashboard/raw-material-form">
@@ -43,7 +51,7 @@
                     <i class="material-symbols-outlined">
                         add
                     </i>
-                    Create New Raw Material
+                    New Raw Material
                 </span>
             </a>
         </div>
