--- a/src/app/marketing/leads/leads.component.html
+++ b/src/app/marketing/leads/leads.component.html
@@ -64,6 +64,9 @@
                     <td class="text-body"> {{ lead.source }} </td>
                     <td>
                         <div class="action-buttons d-flex align-items-center">
+                            <button routerLink="/dashboard/marketing/conversations/{{lead.id}}" type="button" class="p-0 bg-transparent d-inline-block lh-1 border-0" title="Convert to Customer">
+                                <i class="material-symbols-outlined"> message </i>
+                            </button>
                             <button (click)="convertToCustomer(lead.id!)" type="button" class="p-0 bg-transparent d-inline-block lh-1 border-0" title="Convert to Customer">
                                 <i class="material-symbols-outlined"> forward </i>
                             </button>
